--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -20,6 +20,7 @@ domains = { path = "../domains" }
 sub = { path = "../sub" }
 time = { version = "0.3.11", features = ["serde", "serde-well-known"] }
 uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
+random_name_generator = "0.3.4"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
