--- a/sub/Cargo.toml
+++ b/sub/Cargo.toml
@@ -17,3 +17,8 @@ csv = "1.2.1"
 apache-avro = { version = "0.14", features = ["snappy"] }
 parquet = { version = "40.0", features = ["json", "snap", "arrow"] }
 arrow-array = "40.0"
+flatten-json-object = "0.6.1"
+json-objects-to-csv = "0.1.3"
+
+[dev-dependencies]
+time = { version = "0.3.11", features = ["serde", "serde-well-known"] }
