--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ dashmap = "5.5.0"
 random_name_generator = "0.3.5"
 convert_case = "0.6.0"
 time = "0.3.25"
+deltalake = { version = "0.14.0", features = ["datafusion"] }
