Added first tests (which are failing). Also added github workflows pipeline back in.

--- a/tests/config/test_config.toml
+++ b/tests/config/test_config.toml
@@ -8,7 +8,7 @@ type = "Files"
 source_table_name = "csv_table"
 dest_table_name = "json_table"
 dirpath = "./tests/data/json_table/"
-filetype = "Json"
+filetype = "json"
 
 [[source_table]]
 type = "OpenTable"
@@ -20,11 +20,11 @@ type = "Files"
 source_table_name = "delta_table"
 dest_table_name = "delta_as_csv_table"
 dirpath = "./tests/data/delta_as_csv_table/"
-filetype = "Csv"
+filetype = "csv"
 
 [[destination_table]]
 type = "OpenTable"
 source_table_name = "csv_table"
 dest_table_name = "csv_as_delta_table"
 dirpath = "./tests/data/csv_as_delta/"
-filetype = "Delta"
+format = "delta_lake"
