--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ tokio = { version = "1", features = ["full"] }
 pretty_env_logger = "0.4"
 log = "0.4"
 toml = "0.7.3"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 datafusion = "28.0.0"
 dashmap = "5.5.0"
