--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,8 +35,8 @@ jobs:
           ${{ runner.os }}-cargo-target-${{ hashFiles('Cargo.toml') }}
           ${{ runner.os }}-cargo-target
 
-    - name: Build
-      run: cargo build --verbose
-
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
+
+    - name: Run Linter
+      run: cargo clippy -- -Dwarnings
