Added tests for source files table. Two still failing due to lack of test data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ deltalake = { version = "0.14.0", features = ["datafusion"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 arrow-schema = "43.0.0"
 parquet = "43.0.0"
+
+[dev-dependencies]
+arrow-array = "43.0.0"
