--- a/tests/config/test_config.toml
+++ b/tests/config/test_config.toml
@@ -1,30 +1,43 @@
+# [[source_table]]
+# type = "files"
+# table_name = "csv_table"
+# dirpath = "./tests/data/csv_table/"
+
 [[source_table]]
 type = "files"
-table_name = "csv_table"
-dirpath = "./tests/data/csv_table/"
-
-[[destination_table]]
-type = "files"
-source_table_name = "csv_table"
-dest_table_name = "json_table"
+table_name = "json_table"
 dirpath = "./tests/data/json_table/"
 filetype = "json"
 
-[[source_table]]
-type = "open_table"
-table_name = "delta_table"
-dirpath = "./tests/data/delta_table/"
+# [[destination_table]]
+# type = "files"
+# source_table_name = "csv_table"
+# dest_table_name = "csv_as_json_table"
+# dirpath = "./tests/data/csv_as_json_table/"
+# filetype = "json"
 
 [[destination_table]]
 type = "files"
-source_table_name = "delta_table"
-dest_table_name = "delta_as_csv_table"
-dirpath = "./tests/data/delta_as_csv_table/"
+source_table_name = "json_table"
+dest_table_name = "json_as_csv_table"
+dirpath = "./tests/data/json_as_csv_table/"
 filetype = "csv"
 
-[[destination_table]]
-type = "open_table"
-source_table_name = "csv_table"
-dest_table_name = "csv_as_delta_table"
-dirpath = "./tests/data/csv_as_delta/"
-format = "delta_lake"
+# [[source_table]]
+# type = "open_table"
+# table_name = "delta_table"
+# dirpath = "./tests/data/delta_table/"
+
+# [[destination_table]]
+# type = "files"
+# source_table_name = "delta_table"
+# dest_table_name = "delta_as_csv_table"
+# dirpath = "./tests/data/delta_as_csv_table/"
+# filetype = "csv"
+
+# [[destination_table]]
+# type = "open_table"
+# source_table_name = "csv_table"
+# dest_table_name = "csv_as_delta_table"
+# dirpath = "./tests/data/csv_as_delta/"
+# format = "delta_lake"
