--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4"
 toml = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
-datafusion = "28.0.0"
+datafusion = { version = "28.0.0", features = ["avro"] }
 dashmap = "5.5.0"
 random_name_generator = "0.3.5"
 convert_case = "0.6.0"
