--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ dashmap = "5.5.0"
 random_name_generator = "0.3.5"
 convert_case = "0.6.0"
 time = "0.3.25"
+chrono = { version = "0.4.26", features = ["serde"] }
 deltalake = { version = "0.14.0", features = ["datafusion"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 arrow-schema = "43.0.0"
