--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ pretty_env_logger = "0.4"
 log = "0.4"
 toml = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
 serde_derive = "1.0"
 datafusion = { version = "28.0.0", features = ["avro"] }
 dashmap = "5.5.0"
@@ -20,6 +21,7 @@ deltalake = { version = "0.14.0", features = ["datafusion"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 arrow-schema = "43.0.0"
 parquet = "43.0.0"
+apache-avro = { version = "0.15.0", features = ["snappy"] }
 
 [dev-dependencies]
 arrow-array = "43.0.0"
