Another try to have github actions create and use a cache.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,9 +41,7 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       
       - name: Run linter
-        run: |
-          cargo fmt --all -- --check
-          cargo clippy -- -D warnings          
+        run: cargo clippy -- -D warnings          
       
       - name: Install cargo check tools
         run: |
