--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,22 +41,10 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       
       - name: Run linter
-        run: cargo clippy -- -D warnings          
-      
-      - name: Install cargo check tools
-        run: |
-          cargo install --locked cargo-deny || true
-          cargo install --locked cargo-outdated || true
-          cargo install --locked cargo-udeps || true
-          cargo install --locked cargo-audit || true     
+        run: cargo clippy -- -D warnings             
       
       - name: Run check
-        run: |
-          cargo deny check
-          cargo outdated --exit-code 1
-          cargo udeps
-          rm -rf ~/.cargo/advisory-db
-          cargo audit
+        run: cargo check
       
       - name: Run test
         run: cargo test
