--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ pretty_env_logger = "0.4"
 log = "0.4"
 toml = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1"
+serde_json = { version="1", features = ["raw_value"] }
 serde_derive = "1.0"
 datafusion = { version = "28.0.0", features = ["avro"] }
 dashmap = "5.5.0"
@@ -22,6 +22,8 @@ uuid = { version = "1.2.2", features = ["v4"] }
 arrow-schema = "43.0.0"
 parquet = "43.0.0"
 apache-avro = { version = "0.15.0", features = ["snappy"] }
+reqwest = { version = "0.11.20", features = ["json"] }
+arrow-json = "43.0.0"
 
 [dev-dependencies]
 arrow-array = "43.0.0"
