--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ apache-avro = { version = "0.15.0", features = ["snappy"] }
 reqwest = { version = "0.11.20", features = ["json"] }
 arrow-json = "43.0.0"
 arrow-array = "43.0.0"
+http = "0.2.9"
